Finial fix and add challenge readme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple_react_start_kit_2017",
+  "name": "react-coding-challenge",
   "description": "react webpack2 react-router example",
   "version": "2.0.0",
   "main": "src/index.js",
